update home services, icons

--- a/assets/icons/style.css
+++ b/assets/icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?ifiz2e');
-  src:  url('fonts/icomoon.eot?ifiz2e#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?ifiz2e') format('truetype'),
-    url('fonts/icomoon.woff?ifiz2e') format('woff'),
-    url('fonts/icomoon.svg?ifiz2e#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?vhgcf2');
+  src:  url('fonts/icomoon.eot?vhgcf2#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?vhgcf2') format('truetype'),
+    url('fonts/icomoon.woff?vhgcf2') format('woff'),
+    url('fonts/icomoon.svg?vhgcf2#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,51 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-arrow_forward:before {
-  content: "\e90a";
-}
-.icon-close:before {
-  content: "\e909";
-}
-.icon-menu:before {
-  content: "\e908";
-}
-.icon-arrow:before {
-  content: "\e907";
-}
-.icon-email:before {
-  content: "\e902";
-}
-.icon-location_on:before {
-  content: "\e900";
-}
-.icon-place:before {
-  content: "\e900";
-}
-.icon-room:before {
-  content: "\e900";
+.icon-arrow_right:before {
+  content: "\e901";
 }
 .icon-phone:before {
-  content: "\e901";
-}
-.icon-local_phone:before {
-  content: "\e901";
-}
-.icon-square:before {
-  content: "\e906";
-}
-.icon-linkedin:before {
-  content: "\e903";
-}
-.icon-facebook:before {
-  content: "\e904";
-}
-.icon-brand:before {
-  content: "\e904";
-}
-.icon-social:before {
-  content: "\e904";
-}
-.icon-instagram:before {
-  content: "\e905";
+  content: "\e900";
 }
