--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -11,14 +11,73 @@ Tahoma,
 Geneva,
 sans-serif;
 
-@mixin list-reset {
+// Mixins
+
+@mixin reset-list {
     list-style: none;
     padding: 0;
     margin: 0;
 }
 
-@mixin hr-reset {
+@mixin reset-hr {
     border: none;
     display: block;
     margin: 1rem 0;
+}
+
+@mixin reset-button {
+    border: none;
+    outline: none;
+    cursor: pointer;
+    font-family: $font;
+    background-color: transparent;
+
+    :focus {
+        outline: none;
+    }
+
+    :active {
+        outline: none;
+    }
+}
+
+@mixin reset-input {
+    font-family: $font;
+    border: none;
+    outline: none;
+    resize: none;
+
+    // Remove Autofill Colours
+    &:-webkit-autofill {
+
+        &,
+        &:hover,
+        &:focus {
+            transition: background-color 5000s ease-in-out 0s;
+        }
+    }
+
+    :focus {
+        outline: none;
+    }
+
+    :active {
+        outline: none;
+    }
+
+    &::-webkit-outer-spin-button,
+    &::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
+
+    &[type=number] {
+        -moz-appearance: textfield;
+    }
+}
+
+@mixin box-shadow {
+    -webkit-box-shadow: 3px 3px 25px -15px rgba($green, 0.3);
+    -moz-box-shadow: 3px 3px 25px -15px rgba($green, 0.3);
+    box-shadow: 3px 3px 25px -15px rgba($green, 0.3);
 }
