--- a/components/Content/Contact/contact.module.scss
+++ b/components/Content/Contact/contact.module.scss
@@ -17,6 +17,7 @@
 
         a {
             margin: 0.25rem 0;
+            display: block;
 
             &:hover {
                 color: $grey;
