--- a/components/Content/Services/services.module.scss
+++ b/components/Content/Services/services.module.scss
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    padding: 0 5rem;
 
     .item {
         margin: 0.5rem;
