--- a/components/Content/ClientBanner/banner.module.scss
+++ b/components/Content/ClientBanner/banner.module.scss
@@ -4,6 +4,10 @@
     padding: 1rem;
     border-top: 1px solid $lightgrey;
 
+    >div {
+        min-height: 4rem;
+    }
+
     .inner {
         display: flex;
 
