--- a/assets/icons/style.css
+++ b/assets/icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?vhgcf2');
-  src:  url('fonts/icomoon.eot?vhgcf2#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?vhgcf2') format('truetype'),
-    url('fonts/icomoon.woff?vhgcf2') format('woff'),
-    url('fonts/icomoon.svg?vhgcf2#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?5hez5l');
+  src:  url('fonts/icomoon.eot?5hez5l#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?5hez5l') format('truetype'),
+    url('fonts/icomoon.woff?5hez5l') format('woff'),
+    url('fonts/icomoon.svg?5hez5l#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-block:before {
+  content: "\e902";
+}
 .icon-arrow_right:before {
   content: "\e901";
 }
