--- a/styles/pages/services.module.scss
+++ b/styles/pages/services.module.scss
@@ -1,1 +1,88 @@
 @import "../variables.scss";
+
+.services {
+
+    .list {
+        background-color: rgba($lightgrey, 0.1);
+        padding: 4rem 0;
+
+        .grid {
+            display: grid;
+            grid-template-columns: 1fr;
+            gap: 3rem;
+
+            .service {
+                display: flex;
+                min-height: 20rem;
+                background-color: $white;
+                border: 2px solid $red;
+
+                .image {
+                    width: 40%;
+                }
+
+                .content {
+                    width: 60%;
+                    padding: 2rem 2.5rem;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+
+
+                    h4 {
+                        font-size: 1.4rem;
+                        margin: 0;
+                    }
+
+                    hr {
+                        @include reset-hr;
+                        height: 2px;
+                        background-color: $grey;
+                        width: 100%;
+                        margin: 1.5rem 0 1.5rem -2.5rem;
+                    }
+
+                    ul {
+                        @include reset-list;
+
+                        li {
+                            font-size: 1.1rem;
+                            margin: 0.25rem;
+                            display: flex;
+                            align-items: center;
+
+                            i {
+                                color: $red;
+                                margin-right: 0.25rem;
+                            }
+                        }
+                    }
+                }
+
+                &:nth-child(even) {
+                    flex-direction: row-reverse;
+
+                    .content {
+                        text-align: right;
+
+                        hr {
+                            @include reset-hr;
+                            margin: 1.5rem 0 1.5rem 2.5rem;
+                        }
+
+                        ul {
+
+                            li {
+                                flex-direction: row-reverse;
+
+                                i {
+                                    margin: 0 0 0 0.25rem;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
