update about page

--- a/components/Content/ClientBanner/banner.module.scss
+++ b/components/Content/ClientBanner/banner.module.scss
@@ -3,6 +3,7 @@
 .banner {
     padding: 1rem;
     border-top: 1px solid $lightgrey;
+    border-bottom: 1px solid $lightgrey;
 
     >div {
         min-height: 4rem;
