--- a/styles/pages/services.module.scss
+++ b/styles/pages/services.module.scss
@@ -50,6 +50,7 @@
                             margin: 0.25rem;
                             display: flex;
                             align-items: center;
+                            text-transform: capitalize;
 
                             i {
                                 color: $red;
