--- a/components/Content/ProjectGrid/grid.module.scss
+++ b/components/Content/ProjectGrid/grid.module.scss
@@ -4,4 +4,12 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 2rem;
+
+    @media screen and (max-width:991px) {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    @media screen and (max-width:768px) {
+        grid-template-columns: 1fr;
+    }
 }
