--- a/components/Content/StatsBanner/banner.module.scss
+++ b/components/Content/StatsBanner/banner.module.scss
@@ -26,4 +26,9 @@
             line-height: 1.25;
         }
     }
+
+    @media screen and (max-width:768px) {
+        grid-template-columns: 1fr;
+        gap: 1.5rem;
+    }
 }
