--- a/components/Content/Services/services.module.scss
+++ b/components/Content/Services/services.module.scss
@@ -11,6 +11,7 @@
         border: 2px solid $red;
         padding: 0.75rem 1.5rem;
         transition: 0.2s ease-in-out;
+        text-align: center;
 
         h5 {
             font-size: 1.05rem;
@@ -22,5 +23,9 @@
             background-color: $red;
             color: $white;
         }
+    }
+
+    @media screen and (max-width:991px) {
+        padding: 0;
     }
 }
