--- a/components/UI/Footer/footer.module.scss
+++ b/components/UI/Footer/footer.module.scss
@@ -61,4 +61,24 @@
             }
         }
     }
+
+    @media screen and (max-width:768px) {
+        .grid {
+            grid-template-columns: 1fr 1fr;
+
+            .info {
+                grid-column: 1/3;
+            }
+        }
+    }
+
+    @media screen and (max-width:576px) {
+        .grid {
+            grid-template-columns: 1fr;
+
+            .info {
+                grid-column: unset;
+            }
+        }
+    }
 }
