--- a/components/UI/Footer/footer.module.scss
+++ b/components/UI/Footer/footer.module.scss
@@ -67,7 +67,7 @@
             grid-template-columns: 1fr 1fr;
 
             .info {
-                grid-column: 1/3;
+                grid-area: 2/1/3/3;
             }
         }
     }
@@ -77,7 +77,7 @@
             grid-template-columns: 1fr;
 
             .info {
-                grid-column: unset;
+                grid-area: 3/1/4/2;
             }
         }
     }
