--- a/styles/pages/services.module.scss
+++ b/styles/pages/services.module.scss
@@ -86,4 +86,49 @@
             }
         }
     }
+
+    @media screen and (max-width:576px) {
+        .list .grid .service {
+            flex-direction: column;
+
+            &:nth-child(even) {
+                flex-direction: column;
+
+                .content {
+                    text-align: left;
+
+                    hr {
+                        margin: 1.5rem 0 1.5rem -1rem;
+                    }
+
+                    ul {
+
+                        li {
+                            flex-direction: row;
+
+                            i {
+                                margin: 0 0.25rem 0 0;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .image {
+                width: 100%;
+                height: 12.5rem;
+            }
+
+            .content {
+                width: 100%;
+                padding: 2rem 1rem;
+
+                hr {
+                    margin: 1.5rem 0 1.5rem -1rem;
+                }
+
+                ul li {}
+            }
+        }
+    }
 }
