add project slug page

--- a/components/UI/Header/header.module.scss
+++ b/components/UI/Header/header.module.scss
@@ -155,6 +155,7 @@
             color: $red;
             font-size: 1.25rem;
             padding: 1rem;
+            cursor: pointer;
         }
 
 
