--- a/styles/pages/index.module.scss
+++ b/styles/pages/index.module.scss
@@ -17,6 +17,8 @@
 
                 .image {
                     display: none;
+
+
                 }
 
                 h1 {
@@ -37,11 +39,40 @@
                     }
                 }
             }
+
+
+            .image {
+                position: relative;
+
+                img {
+                    opacity: 0.5;
+                }
+
+                .logo {
+                    position: absolute;
+                    z-index: 10;
+                    top: 60%;
+                    right: 0;
+                    transform: translateY(-50%);
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+
+                    >div {
+                        height: 5rem;
+                        width: 3px;
+                        background-color: $red;
+                        margin-bottom: 1rem;
+                    }
+
+                    img {
+                        width: 7.5rem;
+                        opacity: 1;
+                    }
+                }
+            }
         }
 
-        .image {
-            opacity: 0.5;
-        }
     }
 
     .about {
@@ -155,6 +186,10 @@
                     .image {
                         display: unset;
                         padding: 1rem 0;
+
+                        .logo {
+                            display: none;
+                        }
                     }
 
                     .buttons {
