--- a/styles/pages/projects/[slug].module.scss
+++ b/styles/pages/projects/[slug].module.scss
@@ -64,6 +64,10 @@
   @media screen and (max-width: 991px) {
     .overview .grid {
       grid-template-columns: 1fr;
+
+      .imageContainer {
+        height: 300px;
+      }
     }
 
     .gallery .grid {
